Groups in Dopesheet and Action editor don't get updated after bone renaming #32249

Closed
opened 2012-08-03 15:20:05 +02:00 by Tobias Oelgarte · 5 comments

%%%To reproduce the bug:

  1. Insert a armature in the default scene.
  2. Insert a key for the bone with I -> Location
  3. Rename the bone

The group name will not be updated. If you now create a second bone, rename it to "Bone" (the name the group currently has), and insert another location key, then both bones will belong to the same group. Without any option to rename or modify the group the user can only delete the keys to bring stuff in order again.%%%

%%%To reproduce the bug: 1. Insert a armature in the default scene. 2. Insert a key for the bone with I -> Location 3. Rename the bone The group name will not be updated. If you now create a second bone, rename it to "Bone" (the name the group currently has), and insert another location key, then both bones will belong to the same group. Without any option to rename or modify the group the user can only delete the keys to bring stuff in order again.%%%

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Known limitation.

Officially, these are not explicitly "bone channels", but rather just generic groups that happen to be used for grouping together all the channels of bones. Hence, originally the syncing code was never put in. Nevertheless, this is problematic for most users, so it will be fixed.

NOTE: it is possible to rename groups. Just Ctrl-Click on the names to do so. The very same trick works in the Outliner.%%%

%%%Known limitation. Officially, these are not explicitly "bone channels", but rather just generic groups that happen to be used for grouping together all the channels of bones. Hence, originally the syncing code was never put in. Nevertheless, this is problematic for most users, so it will be fixed. NOTE: it *is* possible to rename groups. Just Ctrl-Click on the names to do so. The very same trick works in the Outliner.%%%

%%%Is it somehow possible to create groups or to remove channels from groups?%%%

%%%Is it somehow possible to create groups or to remove channels from groups?%%%
Member

%%%Fixed in svn.

Regarding your question: Currently it's not possible (from the UI, and it probably doesn't work/isn't safe to do from PyScripts). Having said that, it has been lurking on one of my todo lists floating around (it might've been on the one that's now pile under an unwieldy stack of papers now ;) though I haven't had time to address it yet.%%%

%%%Fixed in svn. Regarding your question: Currently it's not possible (from the UI, and it probably doesn't work/isn't safe to do from PyScripts). Having said that, it has been lurking on one of my todo lists floating around (it might've been on the one that's now pile under an unwieldy stack of papers now ;) though I haven't had time to address it yet.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32249
No description provided.