Bugfix [#32249] Groups in Dopesheet and Action editor don't get updated after bone renaming

* Renaming F-Curves now checks if the corresponding F-Curve's group can also be
renamed accordingly.
* Changed the RNA updates for bone renaming so that they properly update the
channel lists